Closed Bug 1670252 Opened 4 years ago Closed 3 years ago

navigator.clipboard.writeText rejects with undefined as rejection value

Categories

(Core :: DOM: Core & HTML, defect)

Firefox 81
defect

Tracking

()

RESOLVED FIXED
85 Branch
Tracking Status
firefox85 --- fixed

People

(Reporter: michalwadas, Assigned: evilpie)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:81.0) Gecko/20100101 Firefox/81.0

Steps to reproduce:

Executed code:

newClipText = 'foo';
navigator.clipboard.writeText(newClipText);

In dev console.

Actual results:

Promise was rejected with undefined as rejection value.

Expected results:

Promise should be rejected with Error instance.

Blocks: 1619251
Component: Untriaged → DOM: Core & HTML
Product: Firefox → Core
Severity: -- → S3
Assignee: nobody → evilpies
Pushed by evilpies@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/921737066346
Throw an NotAllowedError for missing user-activation when using clipboard.write. r=annyG
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 85 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: