Bug 1670252 - Throw an NotAllowedError for missing user-activation when using clipboard.write. r=annyG

Differential Revision: https://phabricator.services.mozilla.com/D97862